add findCategoryByType
